test/errors/python_error/zs/api_clashing/api_package_with_api_clash_error.zs
package api_clashing.api_package_with_api_clash_error;

import api_clashing.api_package_with_api_clash_error.api.some_package.*;

// 'api.py' generated for this package will clash with the 'api' package on the same level
// generated due to api_clashing.api_package_with_api_clash_error.api.some_package

struct Test
{
    SomeStruct someStruct;
};
